<resources>
    <string name="app_name">AppAlcoolGazolina</string>
    <string name="txt_titulo">Gazolina X Etanol</string>
    <string name="edit_primeiro_nome">Primeiro Nome</string>
    <string name="edit_sobrenome">Sobrenome</string>
    <string name="edit_curso_desejado">Nome do Curso Desejado</string>
    <string name="edit_contato">Telefone de Contato</string>
    <string name="btn_limpar">Limpar</string>
    <string name="tbn_salvar">Salvar</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="txt_selecione_curso">Selecione um Curso</string>
</resources>